tests/error/stri2int_type_2.src
.IPPcode18
defvar GF@a
defvar GF@b
move GF@a string@abc
stri2int GF@a bool@true